# skiver

./: .gitignore  Cargo.toml  README.md  SRR7415629_log  skiver  test.ipynb
scripts/: find_outliers.ipynb  fit_hazard_ratio.py  parse_verbose_output.py  plot_sbs96_spectrum.py  remove_unrelated_characters.sh  test.py
src/: analyze.rs  avx2_seeding.rs  cmdline.rs  constants.rs  huber.rs  inference.rs  kmer.rs  kvmer.rs  lib.rs  main.rs  mapping.rs  seeding.rs  sketch.rs  types.rs  utils.rs
