[package]
name = "kvmer"
version = "0.1.0"
edition = "2024"

[dependencies]
needletail = "0.5.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
simple_logger=  { version = "3", features = ["stderr"] }
glob = "0.3.2"
clap = { version = "3", features = ["derive"] }
bincode = "1"
serde = { version = "1", features = ["derive"] }
rayon = "1.11.0"
crossbeam-channel = "0.5.15"
scirs2-optimize = { version = "0.1.0-rc.2", features = ["async"] }
rand = "0.9.2"
scirs2-core = "0.1.0-rc.2"
fastrand = "2.3.0"